compiler/tools/fpp-check/test/invalid_symbols/state_machine_as_qualifier.fpp
state machine S
active component C {
  state machine instance s: S.s
}
